syntax = "proto3";

package shorturls.management.messages.v1;

import "buf/validate/validate.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "messages/v1";

message UpdateShortURLParams {
  google.protobuf.StringValue alias = 1 [
    (buf.validate.field).string.min_len = 4,
    (buf.validate.field).string.max_len = 30,
    (buf.validate.field).string.pattern = "^[A-Za-z0-9]+$"
  ];
  string long_url = 2; // validated at application level
  string description = 3 [(buf.validate.field).string.max_len = 1000];
  google.protobuf.Timestamp expires_at = 4 [(buf.validate.field).timestamp.gt_now = true];
  repeated string tags = 5 [
    (buf.validate.field).repeated.unique = true,
    (buf.validate.field).repeated.max_items = 10,
    (buf.validate.field).repeated.items = {
      string: {
        min_len: 1
        max_len: 50
      }
    }
  ];
}

message UpdateShortURLByOrganizationIDRequest {
  string organization_id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.uuid = true
  ];
  string domain = 2 [(buf.validate.field).required = true];
  string alias = 3 [(buf.validate.field).required = true];

  UpdateShortURLParams short_url = 4 [(buf.validate.field).required = true];

  google.protobuf.FieldMask update_mask = 5 [
    (buf.validate.field).required = true,
    (buf.validate.field).cel = {
      id: "valid_update_mask"
      message: "a field mask path must contain only valid fields"
      expression: "this.paths.all(path, path in ['alias', 'long_url', 'description', 'expires_at', 'tags'])"
    }
  ];
}
